--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -4,7 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BillFragment">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/selectitem"
+    android:textStyle="bold|italic"
+    android:textSize="40sp"
+    android:layout_marginStart="50sp"
+    android:background="#B6E1B8"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
