--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -4,52 +4,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BillFragment">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/selectitem"
-    android:textStyle="bold|italic"
-    android:textSize="40sp"
-    android:layout_marginStart="50sp"
-    android:background="#B6E1B8"/>
-   <Spinner
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/item1"
-       android:entries="@array/food_item"
-       android:layout_marginStart="130dp"
-       android:layout_marginTop="70dp"/>
-   <com.google.android.material.floatingactionbutton.FloatingActionButton
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:src="@drawable/baseline_add_circle_24"
-       android:layout_marginTop="140dp"
-       android:layout_marginStart="90dp"
-       android:id="@+id/btnAdd" />
-   <EditText
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:hint="@string/qnt"
-       android:textAlignment="center"
-       android:layout_marginTop="140dp"
-       android:layout_marginStart="150dp"
-       android:inputType="number"
-       android:id="@+id/etQnt"/>
-   <com.google.android.material.floatingactionbutton.FloatingActionButton
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:src="@drawable/baseline_arrow_left_24"
-       android:layout_marginTop="140dp"
-       android:layout_marginStart="200dp"
-       android:id="@+id/btnSub" />
-   <com.google.android.material.button.MaterialButton
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="350dp"
-       android:text="@string/order"
-       android:id="@+id/btnOrder"
-       android:textStyle="bold|italic"
-       android:layout_marginStart="130dp"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50sp"
+        android:background="#B6E1B8"
+        android:text="@string/selectitem"
+        android:textSize="40sp"
+        android:textStyle="bold|italic" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="140dp"
+        android:src="@drawable/baseline_add_circle_24" />
+
+    <TextView
+        android:id="@+id/etQnt"
+        android:layout_width="100dp"
+        android:hint="@string/qnt"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="140dp"
+        android:textAlignment="center" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnSub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="140dp"
+        android:src="@drawable/baseline_arrow_left_24" />
+
+    <Spinner
+        android:id="@+id/item1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="250dp" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="350dp"
+        android:text="@string/order"
+        android:textStyle="bold|italic" />
 
 
 </RelativeLayout>
