--- a/app/src/main/res/layout/item_base_adapter.xml
+++ b/app/src/main/res/layout/item_base_adapter.xml
@@ -6,11 +6,13 @@
 
     <TextView
         android:id="@+id/etItem"
+        android:textSize="40sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/etQnty"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
