--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item"
-        android:icon="@drawable/item"
+        android:icon="@drawable/baseline_baby_changing_station_24"
         android:title="@string/Item" />
     <item
         android:id="@+id/bill"
-        android:icon="@drawable/bill"
+        android:icon="@drawable/baseline_balance_24"
         android:title="@string/Bill" />
 </menu>
